Bug 109218 - js_SetupLocks appears excessive. Ported by jeff.qiu@sun.com, a=jdunn@netscape.com